# hempventory

./: .gitignore
hemp-inventory-backend/: Dockerfile  fly.toml  pyproject.toml
hemp-inventory-backend/app/: auth.py  clover_client.py  database.py  main.py
hemp-inventory-backend/app/routers/: alerts_router.py  auth_router.py  chat_router.py  discount_router.py  ecommerce_router.py  inventory_router.py  locations_router.py  loyalty_router.py  par_router.py  sales_router.py  scraper_router.py  shipping_router.py  timeclock_router.py
hemp-inventory-backend/tests/: test_active_sale.py
hemp-inventory-frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json
hemp-inventory-frontend/public/: robots.txt
hemp-inventory-frontend/scripts/: generate-sitemap.cjs
hemp-inventory-frontend/src/: App.tsx
hemp-inventory-frontend/src/components/: Alerts.tsx  Conversations.tsx  Dashboard.tsx  Discounts.tsx  EmployeeAccount.tsx  EmployeeLogin.tsx  EmployeeTimeClock.tsx  Inventory.tsx  Layout.tsx  Locations.tsx  Login.tsx  Loyalty.tsx  OnlineOrders.tsx  ProductScraper.tsx  SalesReport.tsx  SettingsPage.tsx  TimeClock.tsx
hemp-inventory-frontend/src/lib/: api.ts
scripts/: fix_strain_tags.py  strain_tagging_fix_report.md
